# open-shop

services/auth/: pyproject.toml
services/auth/src/: __main__.py
services/auth/src/api/v1/: router.py
services/auth/src/api/v1/auth/: views.py
services/auth/src/api/v1/health/: __init__.py  views.py
services/auth/src/application/: __init__.py  factory.py  lifespan.py
services/auth/src/core/configs/: base.py  jwt.py
